--- a/style copy 2.css
+++ b/style copy 2.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;800&display=swap");
+@import url("https://url6.mailanyone.net/scanner?m=1s9my4-00Ca2k-3c&d=4%7Cmail%2F90%2F1716387600%2F1s9my4-00Ca2k-3c%7Cin6m%7C57e1b682%7C10917358%7C13772167%7C664E01447AA859E2352F61B08D2069B8&o=%2Fphto%3A%2Fftsg.nteoolsgmsapcco%2Fi.i%3Fssyaml2fwt%3DIhr%3Agne00t%40%26%3B8040%3Dpdiwaysslpa&s=_mr9r7ea97wUZfNLUxIvUL2ngzs");
 
 @font-face {
   font-family: "Krungthep";
@@ -15,7 +15,7 @@
 }
 
 body {
-  background-image: url(Illustration_sans_titre.gif);
+  background:url(Connecting.jpg);
   background-size: 100%;
 }
 
@@ -31,9 +31,13 @@ body {
   color: blueviolet;
 }
 
-
+.wrapper {
+  height: 95vh;
+}
 
 .chat {
+  background: black;
+  box-shadow: 10px 10px 0px black;
   overflow: scroll;
   height: 100%;
   display: flex;
@@ -96,7 +100,7 @@ body {
   outline: 0;
   border-top: 0px;
   border-right: 0px;
-  border-bottom: 2px solid fuchsia;
+  border-bottom: 2px solid green;
   border-left: 0px;
 }
 
@@ -122,17 +126,6 @@ input:focus {
 }
 
 audio {
-  height: 30px;
-  display: auto;
-  width: fit-content;
-}
-
-.messages .bot .sub {
-  opacity: 80%;
-  color: fuchsia;
-}
-
-.messages .bot .image {
   height: 30px;
   display: auto;
   width: fit-content;
