--- a/style copy.css
+++ b/style copy.css
@@ -15,7 +15,7 @@
 }
 
 body {
-  background-image: url(Illustration_sans_titre.gif);
+  background:url(Connecting.jpg);
   background-size: 100%;
 }
 
@@ -31,9 +31,13 @@ body {
   color: blueviolet;
 }
 
-
+.wrapper {
+  height: 95vh;
+}
 
 .chat {
+  background: black;
+  box-shadow: 10px 10px 0px black;
   overflow: scroll;
   height: 100%;
   display: flex;
@@ -96,7 +100,7 @@ body {
   outline: 0;
   border-top: 0px;
   border-right: 0px;
-  border-bottom: 2px solid fuchsia;
+  border-bottom: 2px solid green;
   border-left: 0px;
 }
 
